- Exposed configuration to change the size of the splash screen