@@ -64,7 +64,6 @@
     font-weight: normal;
     height: auto;
     line-height: normal;
-    width: 175px;
 }
 
     .popTable .popName {
