@@ -4,6 +4,7 @@
 <head>
     <title>Information Lookup</title>
     <meta charset="utf-8">
+    <meta name="fragment" content="!">
     <!-- Define the versions of IE that will be used to render the page. See Microsoft documentation for details. Optional. -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Responsive -->
